2002-10-09  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (IsUnmanagedtype): Do not recursively check
	fields if the fields are static.  We only need to check instance
	fields. 

	* expression.cs (As.DoResolve): Test for reference type.

	* statement.cs (Using.ResolveExpression): Use
	ConvertImplicitRequired, not ConvertImplicit which reports an
	error on failture
	(Using.ResolveLocalVariableDecls): ditto.

	* expression.cs (Binary.ResolveOperator): Report errors in a few
	places where we had to.

	* typemanager.cs (IsUnmanagedtype): Finish implementation.

2002-10-08  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs: Use StoreFromPtr instead of extracting the type
	and then trying to use Stelem.  Patch is from hwang_rob@yahoo.ca

	* ecore.cs (ImplicitReferenceConversion): It is possible to assign
	an enumeration value to a System.Enum, but System.Enum is not a
	value type, but an class type, so we need to box.

	(Expression.ConvertExplicit): One codepath could return
	errors but not flag them.  Fix this.  Fixes #31853

	* parameter.cs (Resolve): Do not allow void as a parameter type.

2002-10-06  Martin Baulig  <martin@gnome.org>

	* statemenc.cs (FlowBranching.SetParameterAssigned): Don't crash
	if it's a class type and not a struct.  Fixes #31815.

2002-10-06  Martin Baulig  <martin@gnome.org>

	* statement.cs: Reworked the flow analysis code a bit to make it
	usable for dead code elimination.

2002-10-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* cs-parser.jay: allow empty source files. Fixes bug #31781.

2002-10-04  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (ComposedCast.DoResolveType): A quick workaround
	to fix the test 165, will investigate deeper.

2002-10-04  Martin Baulig  <martin@gnome.org>

	* statement.cs (FlowBranching.UsageVector.MergeChildren): Make
	finally blocks actually work.
	(Try.Resolve): We don't need to create a sibling for `finally' if
	there is no finally block.
